@@ -1,3 +1,9 @@
+2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/oprofile.c: change last change to have an
+	  explicit check in the sysctl dump, rather than generalised
+	  code.
+
 2002-01-04  Philippe Elie  <ph_e@club-internet.fr>
 
 	* module/oprofile.c: do not re-enable counter during
